<resources>
    <string name="app_name">Job Refer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred? Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string-array name="qualification_array">
        <item>BCA</item>
        <item>Bsc IT</item>
        <item>MCA</item>
    </string-array>

    <string-array name="year_array">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
    </string-array>

    <string-array name="question_array">
        <item>what is your pet name?</item>
        <item>What is your childhood name?</item>
        <item>What is first school?</item>
    </string-array>

    <string name="title_activity_agreement">AgreementActivity</string>
    <string name="title_activity_job_detail">JobDetail</string>
    <string name="search_hint">Serach Temple</string>

    <string name="agreement_title">Privacy Policy</string>
    <string name="agreement_text">Hi</string>

    <string name="aboutus_text">About Us</string>

    <string name="help_text">Help</string>

    <string name="change_button_text">submit</string>

    <string name="forgot_title">Forgot Password</string>
    <string name="forgot_button_text">submit</string>

    <string name="hint_password">Password</string>
    <string name="hint_confirmpassword">Confirm Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_email">Email</string>
    <string name="hint_answer">Answer</string>

    <string name="hint_job_label">JOB Requirement Info</string>
    <string name="hint_job_title">Title</string>
    <string name="hint_job_companyname">Company name</string>
    <string name="hint_job_salarytype">Salary Type</string>
    <string name="hint_job_address">Address</string>
    <string name="hint_job_description">Description</string>

    <string name="job_button_add">Add</string>

    <string name="drawer_title">Job Refer</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_job">JOB</string>
    <string name="drawer_user">User</string>
    <string name="drawer_aboutus">About us</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_logout">Logout</string>

    <string name="profile_personal_title">Personal Info</string>
    <string name="hint_profile_name">Name</string>
    <string name="hint_profile_phone">Phone</string>

    <string name="profile_education_title">Education Info</string>
    <string name="hint_profile_percentage">Percentage</string>
    <string name="hint_profile_skills">Skills</string>

    <string name="profile_experience_title">Experience Info</string>
    <string name="hint_profile_experience">Experience</string>
    <string name="profile_button_text">Submit</string>

    <string name="login_label_title">Welcome To JobRefer</string>
    <string name="login_button_forgot">Forgot Password</string>
    <string name="login_button_privacy">privacy policy</string>


</resources>
