<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/home"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/profile"
            android:title="@string/drawer_profile" />

        <item
            android:id="@+id/nav_job"
            android:icon="@drawable/icon"
            android:title="@string/drawer_job" />

        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/icon"
            android:title="@string/drawer_user" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/aboutus"
            android:title="@string/drawer_aboutus" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/drawer_help" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/drawer_share" />


    </group>

</menu>
