<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#26ae90"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/contact_form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                android:text="@string/profile_personal_title"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_title"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/down"
                android:scaleType="fitCenter" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_profile_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_profile_phone"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/txtAdd"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:breakStrategy="balanced"
                android:fitsSystemWindows="true"
                android:gravity="top|left"
                android:hint="@string/hint_job_address"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:singleLine="false"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:textSize="@dimen/font_small" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/title_education_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                android:text="@string/profile_education_title"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_title"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnEducation"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/down"
                android:scaleType="fitCenter" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llEducation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <Spinner
                android:id="@+id/spn_qualification"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:singleLine="false"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:padding="5dp"
                android:textSize="10dp" />

            <Spinner
                android:id="@+id/spn_year"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:singleLine="false"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:padding="5dp"
                android:textSize="10dp" />

            <EditText
                android:id="@+id/txtPer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_profile_percentage"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/txtSkill"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_profile_skills"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:textSize="@dimen/font_size" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/title_exp_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                android:text="@string/profile_experience_title"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_title"
                android:typeface="serif" />

            <Button
                android:id="@+id/btnExperience"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/down"
                android:scaleType="fitCenter" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llExperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/txtCompany"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_job_companyname"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/txtExp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_profile_experience"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:textSize="@dimen/font_size" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/profile_button_text"
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>