<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="netuinfotech.jobreferdemo.activity.ForgotActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="@dimen/font_size"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_register_hint" />

        <Spinner
            android:id="@+id/spn_question"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:singleLine="false"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:padding="5dp"
            android:textSize="10dp"
            />

        <EditText
            android:id="@+id/txtAnswer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_answer"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="@dimen/font_size"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_register_hint" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/forgot_button_text"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
